# ftdi-D2XX-rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: bindings.rs  main.rs
